--- a/ConfigureAwaitEnforcer/ConfigureAwaitEnforcer/Resources.resx
+++ b/ConfigureAwaitEnforcer/ConfigureAwaitEnforcer/Resources.resx
@@ -118,14 +118,15 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="AnalyzerDescription" xml:space="preserve">
-    <value>Consider using ConfigureAwait(false)</value>
+    <value>Type names should be all uppercase.</value>
+    <comment>An optional longer localizable description of the diagnostic.</comment>
   </data>
   <data name="AnalyzerMessageFormat" xml:space="preserve">
-    <value>Consider using ConfigureAwait(false)</value>
+    <value>Type name '{0}' contains lowercase letters</value>
     <comment>The format-able message the diagnostic displays.</comment>
   </data>
   <data name="AnalyzerTitle" xml:space="preserve">
-    <value>ConfigureAwaitEnforcer</value>
+    <value>Type name contains lowercase letters</value>
     <comment>The title of the diagnostic.</comment>
   </data>
 </root>
