--- a/ConfigureAwaitEnforcer/ConfigureAwaitEnforcer/Resources.resx
+++ b/ConfigureAwaitEnforcer/ConfigureAwaitEnforcer/Resources.resx
@@ -118,7 +118,7 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="AnalyzerDescription" xml:space="preserve">
-    <value>Consider using ConfigureAwait(false)</value>
+    <value>Consider using ConfigureAwait(false).</value>
   </data>
   <data name="AnalyzerMessageFormat" xml:space="preserve">
     <value>Consider using ConfigureAwait(false)</value>
